# xEngine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/platform/: linux.cmake  macOS.cmake  osx.cmake  windows.cmake
plugin/: CMakeLists.txt
plugin/nuklear/: CMakeLists.txt  NuklearConfig.h  NuklearGUI.cc  NuklearGUI.h  NuklearGUID3D11Shader.hlsl
plugin/spine/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/application/: Application.cc  Application.h  ApplicationDelegate.h
runtime/application/macOS/: MacOSApplication.mm
runtime/application/win32/: Win32Application.cc
runtime/asset/: Material.cc  Material.h  Mesh.cc  Mesh.h  Shader.cc  Shader.h
runtime/asset/graphics/: Camera.cc  Camera.h  MeshLoader.cc  MeshLoader.h  Shader.cc  Shader.h
runtime/asset/graphics/util/: MeshUtil.h
runtime/core/: Core.h  Data.cc  Data.h  Log.cc  Types.h
runtime/graphics/: Graphics.cc  GraphicsDefine.h  GraphicsResourceSignature.cc  RendererInterface.h
runtime/graphics/config/: MeshConfig.h  ShaderConfig.h
runtime/graphics/impl/D3D11/: D3D11Define.h  D3D11Renderer.cc  D3D11Renderer.h
runtime/graphics/impl/D3D11/resource/: D3D11GraphicsResource.h  D3D11GraphicsResourceManager.cc  D3D11GraphicsResourceManager.h
runtime/graphics/impl/D3D11/resource/factory/: D3D11PipelineFactory.cc  D3D11ShaderFactory.cc
runtime/graphics/impl/OpenGL/: OpenGLDefine.h  OpenGLRenderer.cc  OpenGLRenderer.h
runtime/graphics/impl/OpenGL/resource/: OpenGLGraphicsResource.h  OpenGLGraphicsResourceManager.cc  OpenGLGraphicsResourceManager.h
runtime/graphics/impl/OpenGL/resource/factory/: OpenGLShaderFactory.cc
runtime/graphics/state/: ClearState.h  DrawState.h  RasterizerState.h
runtime/graphics/util/: MeshUtil.cc  MeshUtil.h
runtime/io/: Filesystem.h  IO.cc  IO.h  IOMessage.h  IOWorker.cc
runtime/object/component/: Camera.cc  Camera.h  MeshFilter.cc  MeshFilter.h  MeshRenderer.cc  MeshRenderer.h  Transform.cc  Transform.h
runtime/object/core/: Component.h  GameObject.cc
runtime/resource/: Resource.h  ResourceIdentity.h  ResourceManger.cc
runtime/storage/: Path.cc  Path.h
runtime/window/: Window.cc  Window.h  WindowConfig.h  WindowDelegate.h
runtime/window/macOS/: MacOSWindow.h  MacOSWindow.mm
runtime/window/win32/: Win32Window.cc  Win32Window.h
sample/: CMakeLists.txt
sample/application/: ApplicationSample.cc  CMakeLists.txt
sample/depth_stencil/: CMakeLists.txt  DepthStencilSample.cc
sample/graphics/: CMakeLists.txt  GraphicsSample.cc  GraphicsSample.h
sample/http/: CMakeLists.txt  HTTPSample.cc
sample/mesh/: MeshSample.cc
sample/nuklear/: CMakeLists.txt  NuklearSample.cc
sample/object/: CMakeLists.txt  ObjectSample.cc
sample/shape/: CMakeLists.txt  ShapeSample.cc
sample/skybox/: SkyBoxSample.cc
sample/storage/: CMakeLists.txt  StorageSample.cc
sample/window/: CMakeLists.txt  WindowSample.cc
src/: CMakeLists.txt
src/application/: Application.cc  Application.h
src/core/: Config.h  Core.h  Counter.h  Data.cc  Data.h  EASTL.cc  Log.cc  Log.h  Types.h
src/graphics/: Graphics.cc  Graphics.h  GraphicsDefine.h  GraphicsResourceManagerInterface.h  GraphicsResourceSignature.cc  GraphicsResourceSignature.h  RendererInterface.h
src/graphics/config/: GraphicsConfig.h  IndexDataConfig.h  MeshConfig.h  ShaderConfig.h  TextureConfig.h  UniformBufferConfig.h  VertexDataConfig.h
src/graphics/impl/D3D11/: D3D11Define.h  D3D11Renderer.cc  D3D11Renderer.h
src/graphics/impl/D3D11/resource/: D3D11GraphicsResource.h  D3D11GraphicsResourceManager.cc  D3D11GraphicsResourceManager.h
src/graphics/impl/D3D11/resource/factory/: D3D11IndexDataFactory.cc  D3D11IndexDataFactory.h  D3D11MeshFactory.cc  D3D11PipelineFactory.cc  D3D11PipelineFactory.h  D3D11ShaderFactory.cc  D3D11ShaderFactory.h  D3D11TextureFactory.cc  D3D11TextureFactory.h  D3D11VertexDataFactory.cc  D3D11VertexDataFactory.h
src/graphics/impl/OpenGL/: OpenGLDefine.h  OpenGLRenderer.cc  OpenGLRenderer.h
src/graphics/impl/OpenGL/resource/: OpenGLGraphicsResource.h  OpenGLGraphicsResourceManager.cc  OpenGLGraphicsResourceManager.h
src/graphics/impl/OpenGL/resource/factory/: OpenGLIndexDataFactory.cc  OpenGLIndexDataFactory.h  OpenGLMeshFactory.cc  OpenGLShaderFactory.cc  OpenGLShaderFactory.h  OpenGLTextureFactory.cc  OpenGLUniformBufferFactory.cc  OpenGLVertexDataFactory.cc  OpenGLVertexDataFactory.h
src/graphics/impl/OpenGL/win32/: Win32OpenGLContext.cc
src/graphics/state/: BlendState.h  ClearState.h  DepthStencilState.h  RasterizerState.h
src/graphics/util/: MeshUtil.cc  MeshUtil.h
src/http/: HTTPFilesystem.cc  HTTPFilesystem.h
src/io/: Filesystem.h  FilesystemManager.h  IO.cc  IO.h  IOMessage.h  IOWorker.cc  IOWorker.h
src/resource/: Resource.h  ResourceFactory.h  ResourceIdentity.h  ResourceManager.h  ResourceManger.cc  ResourceName.h  ResourcePool.h
src/storage/: StorageFilesystem.cc  StorageFilesystem.h
src/window/: Window.cc  Window.h  WindowConfig.h  WindowDefine.h  WindowFactory.cc  WindowFactory.h  WindowInterface.h
src/window/glfw/: GLFWWindow.cc  GLFWWindow.h
src/window/macOS/: MacOSWindow.h  MacOSWindow.mm
src/window/win32/: Win32Window.cc  Win32Window.h
tool/: CMakeLists.txt
tool/mesh_convert_tool/: CMakeLists.txt  MeshConvertTool.cc  MeshConvertToolDefine.h  MeshConvertToolWindow.cc  MeshConvertToolWindow.h  MeshConverter.cc  MeshConverter.h  MeshConvertor.cc  MeshConvertor.h  MeshViewerWindow.cc  MeshViewerWindow.h
tool/shader_compile_tool/: ShaderCompileTool.cc
